welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: not found: value prendreBiscuit
prendreBiscuit
^